--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,9 @@
 }
 
 .App-header {
-  background-color: #222;
+  background: url(wood2.png);
+  background-repeat: no-repeat;
+  background-size: 100% 65px;
   height: 50px;
   padding: 5px;
   color: white;
@@ -14,6 +16,15 @@
   text-align:left;
   padding-left:5px;
   width:150px;
+  display:inline-block;
+}
+
+.search-bar{
+  display:inline-block;
+}
+
+.search-barr{
+  margin-left:5px;
 }
 
 .App-intro {
