--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,13 @@
 .App-header {
   background: url(wood2.png);
   background-repeat: no-repeat;
-  background-size: 100% 65px;
+  background-size: 100% 62px;
+  width:800px;
   height: 50px;
   padding: 5px;
+  margin:0 auto;
   color: white;
+  border-radius:5px;
 }
 
 .App-title {
