--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,9 @@
 .App-header {
   background: url(wood2.png);
   background-repeat: no-repeat;
-  background-size: 100% 62px;
+  background-size: 100% 76px;
   width:800px;
-  height: 50px;
+  height: 54px;
   padding: 5px;
   margin:0 auto;
   color: white;
@@ -17,21 +17,42 @@
 .App-title {
   font-size: 1.5em;
   text-align:left;
-  padding-left:5px;
   width:150px;
   display:inline-block;
 }
 
 .search-bar{
   display:inline-block;
+  margin-bottom:20px;
 }
 
 .search-bar-form{
   margin-left:10px;
+  font-size:17px;
 }
 
 .search-barr{
   margin-left:5px;
+  padding-left:15px;
+  border-radius:15px;
+  border-width:2px;
+  border-style:none;
+  border-color:gray;
+  height:25px;
+  width:200px;
+  border-bottom-style:inset;
+}
+
+.submit{
+  border-radius:50%;
+  border-right-style:none;
+  border-width:2px;
+  border-style:none;
+  border-color:gray;
+  border-bottom-style:inset;
+  background-color:white;
+  height:30px;
+  width:30px;
 }
 
 .App-intro {
